test/org/midica/testfiles/failing/global-partial-invalid-range-elem.midica
INCLUDE inc/instruments.midica

* 0,2-3-4,5

0 c /4
